--- a/src/pieces.scss
+++ b/src/pieces.scss
@@ -1,7 +1,3 @@
-.orp_piece:not(.orp_piece-hidden) ~ .orp_locationFeedback {
-  display: none;
-}
-
 .orp_draftPieces {
   position: relative;
   display: flex;
